
See the <<upgrade-to-v4>> guide.

[[release-notes-4.5.0]]
==== 4.5.0 - 2024/03/13

[float]
===== Features

* Update <<opentelemetry-bridge>> support to `@opentelemetry/api` version 1.8.0.
* Update `tedious` instrumentation to support versions 17 and 18. ({pull}3901[#3901], {pull}3911[#3911])
* Add new `kafkajs` instrumentation. ({issues}2905[#2905])

[float]
===== Bug fixes

* Fix instrumentation of mongodb to not break mongodb@6.4.0. Mongodb v6.4.0
  included changes that resulted in the APM agent's instrumentation breaking it.
  ({pull}3897[#3897])
* Fix hostname detection on Windows in some cases (where a powershell profile
  could break collection). ({pull}3899[#3899])
* Fix a path normalization issue that broke (or partially broke) instrumentation
  of some modules on Windows: Next.js, redis v4+, mongodb. ({pull}3905[#3905])


[[release-notes-4.4.1]]
==== 4.4.1 - 2024/02/06

[float]
===== Bug fixes

* Add support for <<esm,instrumentation of ES module-using (ESM) code>> with
  Node.js versions matching `^18.19.0 || >=20.2.0`. Before this version of
  the APM agent, ESM instrumentation was only supported for some *earlier*
  Node.js versions. Changes in Node.js's ESM loader in v18.19.0 and v20 broke
  earlier ESM support. ({issues}3784[#3784], {pull}3844[#3844])


[[release-notes-4.4.0]]
==== 4.4.0 - 2024/01/12

*Known issue*: Using the APM agent's <<esm>> with Node.js *v18.19.0* is not
supported in this version. Upgrade to APM agent version v4.5.0 or later, or use
Node.js v18.18.1 or earlier.
See https://github.com/elastic/apm-agent-nodejs/issues/3784 for details.

[float]
===== Features

* Support `ELASTIC_APM_ACTIVATION_METHOD=K8S_ATTACH` (in addition to the
  current `K8S` value) to indicate the agent is being started by
  apm-k8s-attacher.  Newer releases of apm-k8s-attacher will be using this
  value (to have a common value used between APM agents).

[float]
===== Bug fixes

* Fix bug where `NODE_ENV` environment value was not used as a default for