@@ -222,6 +222,37 @@ module.exports = (mongodb, agent, { version, enabled }) => {
   }
 
   function collectionFor(event) {
+    // `getMore` command is a special case where the collection name is
+    // placed in a property named `collection`. The types exported
+    // do not ensure the property is there so we are defensive on its
+    // retrieval.
+    //
+    // Example of `getMore` payload:
+    // {
+    //   event: CommandStartedEvent {
+    //     name: 'commandStarted',
+    //     address: '172.20.0.2:27017',
+    //     connectionId: 12,
+    //     requestId: 686,
+    //     databaseName: 'mydatabase',
+    //     commandName: 'getMore',
+    //     command: {
+    //       getMore: new Long('1769182660590360229'),
+    //       collection: 'Interaction',
+    //       ...
+    //     }
+    //   },
+    //   commandName: 'getMore',
+    //   collection: new Long('1769182660590360229')
+    // }
+    // ref: https://github.com/elastic/apm-agent-nodejs/issues/3834
+    if (
+      event.commandName === 'getMore' &&
+      typeof event.command.collection === 'string'
+    ) {
+      return event.command.collection;
+    }
+
     const collection = event.command[event.commandName];
     return typeof collection === 'string' ? collection : '$cmd';
   }
